Products/eXtremeManagement/AAPDIR/log1
extra:	Reading recipe "main.aap"
extra:	Finished reading recipe "main.aap"
depend:	Adding default dependency for "clean"
depend:	Adding default dependency for "cleanmore"
depend:	Building targets specified on command line
depend:	1 - updating target "gen"
depend:	2 - Using dependency "gen : "
depend:	1 - Updating "gen" from "": it doesn't exist
extra:	Shell commands for updating "gen":
system:	cd ..; python ArchGenXML/ArchGenXML.py -c eXtremeManagement/model/generate.conf eXtremeManagement/model/eXtremeManagement.zuml
log:	WARNING Didn't find option 'creation-permission' (from the config file) in the list of allowable options. Run ArchGenXML.py with the --help option for information on allowable options.
WARNING Didn't find option 'no-rcs-id' (from the config file) in the list of allowable options. Run ArchGenXML.py with the --help option for information on allowable options.
ArchGenXML 1.4.0-beta2
(c) 2003-2005 BlueDynamics KEG, under GNU General Public License 2.0 or later
INFO  Parsing...
WARNING Master Object not found for aggregation relation id='I4cdac8m103219cab14mm7f4f'.
INFO  Directory in which we're generating the files: 'eXtremeManagement'.
INFO  Generating...
WARNING Can't strip html from doc-strings. Module 'stripogram' not found.
INFO  Starting new Product: 'eXtremeManagement'.
INFO      Generating class 'Customer'.
INFO      Generating class 'Project'.
CRITICAL Error while reparsing file 'eXtremeManagement/Iteration.py'.
Traceback (most recent call last):
  File "ArchGenXML/ArchGenXML.py", line 80, in ?
    main()
  File "ArchGenXML/ArchGenXML.py", line 77, in main
    gen.parseAndGenerate()
  File "/home/ahadi/Products/ArchGenXML/ArchetypesGenerator.py", line 2818, in parseAndGenerate
    self.generateProduct(root)
  File "/home/ahadi/Products/ArchGenXML/ArchetypesGenerator.py", line 2738, in generateProduct
    self.generatePackage(root)
  File "/home/ahadi/Products/ArchGenXML/ArchetypesGenerator.py", line 2399, in generatePackage
    mod=PyParser.PyModule(filename)
  File "/home/ahadi/Products/ArchGenXML/PyParser.py", line 53, in __init__
    self.ast = parser.suite(self.filebuf)
  File "<string>", line 39
    schema=Schema((
         ^
SyntaxError: invalid syntax

error:	Error in recipe "/home/ahadi/Products/eXtremeManagement/main.aap" line 44: Shell command returned 1
